...
  const [endDateObj, setEndDateObj] = useState(new Date());
  const [menuVisible, setMenuVisible] = useState(false);

  const handleSubmit = async () => {
    try {
      if (!streetAddress || !bathCount || !bedCount || !price || !description || !area || !startDate || !endDate || !type || !city || !state || !zip) {
        alert('Please fill in all the required fields.');
        return;
      }

      // wait for image data to be saved to firebase
      const newImageUri = await saveImageToFirebase();
      console.log("ImageUri from Firebase: ", newImageUri);
...
      });

      Alert.alert(
        "Success",
        "Your property is submitted",
        [{
          text: "OK", onPress: () => {
            clearForms();
            console.log("OK Pressed");
          }
        }]
      );

...
  };

  return (
    <ScrollView style={styles.container}>
      <Card style={styles.card}>
        <Card.Title
          title="Post Your Lease"
          titleStyle={styles.header}
          left={(props) => <MaterialCommunityIcons {...props} name="home-plus" size={40} color="#FFD700" />}
        />
        <Card.Content>
          <View style={styles.imageSection}>
            <TouchableOpacity style={styles.imageButton} onPress={showImageMenu}>
...
            {" Lease Period"}
          </ThemedText>
          <View style={styles.inputGroup}>
            <View style={styles.dateInputContainer}>
              <TextInput
                style={styles.dateInput}
                label="Start Date"
                value={startDate}
                mode="outlined"
                outlineColor="#FFD700"
                activeOutlineColor="#FFD700"
                right={<TextInput.Icon icon="calendar" onPress={() => toggleDatePicker('start')} />}
                onPressIn={() => toggleDatePicker('start')}
...
